# llmops-experiment-platform

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-platform.yml
apps/: local_experiment_ui.py
components/evaluator/: run_evaluation.py  run_single_model_evaluation.py  simulate_evaluation.py
components/inference/: __init__.py  manifest.py  qwen_service.py
components/reporting/: local_leaderboard.py
components/trainer/: run_pretraining.py  simulate_training.py
components/ui/: __init__.py  file_dialogs.py  local_jobs.py  presets.py
components/utils/: io_utils.py  mlflow_utils.py
configs/evaluation/: eval.sample.json  qwen2_5_0_5b.300.single_model.sample.json  (+6 more)
dataset/: metadata.qwen2_5_0_5b.3000.json  metadata.qwen2_5_0_5b.healthcare.500.json  metadata.qwen2_5_0_5b.healthcare.pubmed.2000_500_500.json  metadata.qwen2_5_0_5b.healthcare.pubmed.500.json  metadata.qwen2_5_0_5b.public.json  metadata.qwen2_5_0_5b.sample.json  metadata.sample.json  metadata.smoke_qwen2_5_0_5b.json  metadata.smoke_tiny_gpt2.json
docs/: base-model-cpt-workflow.md  cpt-metrics-glossary.md  qwen-lora-macbook.md
evaluation/: README.md
schemas/: dataset.schema.json  eval.schema.json  golden.schema.json  run.schema.json  scorecard.schema.json
tests/: test_build_pubmed_healthcare_corpus.py  test_evaluator.py  test_file_dialogs.py  test_inference_manifest.py  test_local_eval_script.py  test_local_leaderboard.py  test_local_ui_jobs.py  test_pipeline_compile.py  test_trainer.py  test_ui_presets.py
training/: README.md
(+66 files in other folders)
