[project]
name = "llmops-experiment-platform"
version = "0.1.0"
description = "Local-first LLMOps platform for continued pretraining and evaluation workflows."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "jsonschema>=4.23.0",
    "kfp>=2.8.0,<3.0.0",
    "mlflow>=2.16.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
data = [
    "datasets>=3.0.0,<4.0.0",
]
trainer = [
    "accelerate>=0.34.0,<1.0.0",
    "peft>=0.13.0,<1.0.0",
    "torch>=2.4.0",
    "transformers>=4.46.0,<5.0.0",
]
inference = [
    "fastapi>=0.115.0,<1.0.0",
    "peft>=0.13.0,<1.0.0",
    "torch>=2.4.0",
    "transformers>=4.46.0,<5.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]
mlflow-server = [
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.9",
]
ui = [
    "streamlit>=1.39.0,<2.0.0",
]

[tool.uv]
package = false
